# cargo-genner

./: Cargo.toml
src/: main.rs
