[package]
name = "cargo-genner"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.12", features = ["derive"] }
rand = "0.8.5"
tokio = { version = "1.29.1", features = ["fs", "rt", "macros", "rt-multi-thread"] }
