[package]
name = "cargo-genner"
version = "0.1.0"
edition = "2021"
authors = ["Christian Belloni christianbelloni@hotmail.it"]
description = "a tool to generate random files"
categories = ["command-line-utilities"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.12", features = ["derive"] }
rand = "0.8.5"
tokio = { version = "1.29.1", features = ["fs", "rt", "macros", "rt-multi-thread"] }
